Integer(String) and Double(String) deprecated
Integer(String), as well as Double(String) has been flagged as
deprecated and will be removed.